# samsung

./: README.md  result  result.txt
apps/esp32/light_example/: sdkconfig-원본
apps/esp32/light_example/main/: CMakeLists.txt  caps_dustHealthConcern.c  caps_fanSpeed.c  caps_mode.c  caps_mode.h  caps_mode_orig.cbak  caps_switch.c  caps_switch.h  dev_common.h  device_control.c  device_control.h  device_info.json  git_log.txt  main.c  main.code-workspace  onboarding_config.json  ota_util-231006.c  ota_util.c  public_key.pem  root.pem
bsp/esp32/components/app_update/: esp_ota_ops.c
bsp/esp32/components/bootloader_support/src/: esp_image_format.c
bsp/esp32/components/esptool_py/esptool/encryption_file/: 암호_명령어.txt
bsp/esp32/components/mbedtls/: Kconfig
bsp/esp32/components/mbedtls/port/include/mbedtls/: esp_config.h
bsp/esp32/components/openssl/include/internal/: ssl_x509.h
output/esp32/iotcore_light_example_20231010_1747_1747/debug/: bootloader.elf  bootloader.map  build_info.txt
output/esp32/iotcore_light_example_20231010_1912_1912/debug/: build_info.txt
output/esp32/iotcore_light_example_20231011_1406_1406/debug/: build_info.txt
output/esp32/iotcore_light_example_20231011_1407_1407/debug/: bootloader.map  build_info.txt
output/esp32/iotcore_light_example_20231012_1509_1509/debug/: bootloader.elf  bootloader.map  build_info.txt  sdkconfig
output/esp32/iotcore_light_example_20231012_1719_1719/debug/: build_info.txt
output/esp32/iotcore_light_example_20231012_1728_1728/debug/: build_info.txt
output/esp32/iotcore_light_example_20231012_1729_1729/debug/: build_info.txt  sdkconfig
output/esp32/iotcore_light_example_20231012_1755_1755/debug/: bootloader.elf  build_info.txt
